--- a/app/views/users/shared/_aside.html.erb
+++ b/app/views/users/shared/_aside.html.erb
@@ -15,8 +15,8 @@
   </div>
   <div class="list-group">
     <%= link_to 'Minhas salas', my_rooms_users_url, class: 'list-group-item my-rooms' %>
-    <!-- <a href="#" class="list-group-item">Meus debates</a> -->
-    <!-- <a href="#" class="list-group-item">Meus Posts</a> -->
+    <%#= link_to 'Meus debates', my_debates_url, class: 'list-group-item' %>
+    <%#= link_to 'Meus artigos', my_debates_url, class: 'list-group-item' %>
     <!-- <a href="#" class="list-group-item">Estatisticas</a> -->
   </div>
 </div>
