--- a/app/views/debates/edit.html.erb
+++ b/app/views/debates/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Debate</h1>
-
-<%= render 'form', debate: @debate %>
-
-<%= link_to 'Show', @debate %> |
-<%= link_to 'Back', debates_path %>
+<div class="container container-default">
+  <h1>Editing Debate</h1>
+  <%= render 'form', debate: @debate %>
+</div>
