--- a/app/views/debates/new.html.erb
+++ b/app/views/debates/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Debate</h1>
+<div class="container container-default">
+  <h1>New Debate</h1>
 
-<%= render 'form', debate: @debate %>
-
-<%= link_to 'Back', debates_path %>
+  <%= render 'form', debate: @debate %>
+</div>
