--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -9,10 +9,10 @@
       <li class="nav-item nav-link-room">
         <%= link_to t('rooms_text'), rooms_path, class: 'nav-link' %>
       </li>
-      <!-- <li class="nav-item">
-        <a class="nav-link" href="#">Debates</a>
-      </li>
       <li class="nav-item">
+        <%= link_to 'Debates', debates_path, class: 'nav-link' %>
+      </li>
+      <!--<li class="nav-item">
         <a class="nav-link" href="#"><%= t 'articles'%></a>
       </li> -->
     </ul>
