--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="actions">
-      <%= form.submit 'Create', class: 'btn btn-success' %>
+      <%= form.submit 'Done', class: 'btn btn-success' %>
     </div>
   <% end %>
 
