Change cards layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@
 @import "views/main/errors";
 
 // shared
-@import "views/shared/room_card";
+@import "views/shared/cards";
 @import "views/shared/language_fields";
 
 // rooms
