--- a/app/views/shared/_posting_card.html.erb
+++ b/app/views/shared/_posting_card.html.erb
@@ -1,19 +1,18 @@
-<div class="col-lg-4 col-md-6 mb-4 mt-4 room-card">
+<div class="col-lg-12 col-lg-6 mt-4 model-card">
   <div class="card h-100">
     <div class="card-body">
       <div class="pull-left card-created-at">
         <%= t time_ago_in_words posting.created_at %>
       </div>
-      <div class="share-room pull-right">
-        <a href="" class="btn-facebook" data-link="<%= posting %>">
+      <div class="share-link-card pull-right">
+        <a href="" class="btn-facebook" data-link="<%= debate_url(posting) %>">
           <i class="fa fa-facebook" aria-hidden="true"></i>
         </a>
-        <a href="" class="btn-twitter" data-link="<%= posting %>">
+        <a href="" class="btn-twitter" data-link="<%= debate_url(posting) %>">
           <i class="fa fa-twitter" aria-hidden="true"></i>
         </a>
-        <%=  %>
       </div>
-      <div class="card-room-actions pull-right">
+      <div class="card-actions pull-right">
         <% if can? :update, posting %>
           <%= link_to(edit_debate_path(posting)) do %>
             <i class="fa fa-pencil" aria-hidden="true"></i>
@@ -26,25 +25,28 @@
         <% end %>
       </div>
       <hr>
-      <h4>
-        <i class="fa fa-globe" aria-hidden="true"></i> <%= t posting.language.name %>
-      </h4>
-      <h6>
-        <i class="fa fa-star" aria-hidden="true"></i> <%= t posting.category.title %>
-      </h6>
-      <div class="row">
-        <div class="col-md-4 col-lg-4 card-img-wrap">
-          <% if posting.user.avatar.blank? %>
-            <%= image_tag("profile-icon.png", class: 'card-img-top')  %>
-          <% else %>
-            <%= cl_image_tag(posting.user.avatar, class: 'card-img-top') %>
-          <% end %>
+      <%= link_to(posting, target: "_blank", class: 'model-link') do %>
+        <div class="row">
+          <div class="col-lg-2">
+            <% if posting.user.avatar.blank? %>
+              <%= image_tag("profile-icon.png", class: 'card-img-top')  %>
+            <% else %>
+              <%= cl_image_tag(posting.user.avatar, class: 'card-img-top') %>
+            <% end %>
+            <p class="text-center card-username"><%= posting.user.username %></p>
+          </div>
+          <div class="col-lg-10">
+            <h4><%= t posting.title %></h4>
+            <h6>
+              <i class="fa fa-globe" aria-hidden="true"></i> <%= t posting.language.name %>
+            </h6>
+            <h6>
+              <i class="fa fa-tag" aria-hidden="true"></i> <%= t posting.category.title %>
+            </h6>
+          </div>
         </div>
-        <div class="col-md-6 col-lg-6 no-padding">
-          <p class="text-center card-username"><%= t posting.user.username %></p>
-        </div>
-      </div>
+      <% end %>
     </div>
-    <%= link_to t('join_room'), posting, target: "_blank", class: 'btn b-light-blue' %>
+
   </div>
 </div>
