--- a/app/views/debates/index.html.erb
+++ b/app/views/debates/index.html.erb
@@ -1,25 +1,15 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Debates</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @debates.each do |debate| %>
-      <tr>
-        <td><%= link_to 'Show', debate %></td>
-        <td><%= link_to 'Edit', edit_debate_path(debate) %></td>
-        <td><%= link_to 'Destroy', debate, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Debate', new_debate_path %>
+<div class="container">
+  <div class="container-default">
+    <div class="row">
+      <div class="col-lg-8">
+        <h1>Debates</h1>
+      </div>
+      <div class="col-lg-4">
+        <%= link_to t('create_debate'), new_debate_url, class: 'float-right' %>
+      </div>
+    </div>
+    <div class="row">
+      <%= render partial: "shared/posting_card", collection: @debates, as: :posting %>
+    </div>
+  </div>
+</div>
