--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -9,7 +9,7 @@
       <li class="nav-item nav-link-room">
         <%= link_to t('rooms_text'), rooms_path, class: 'nav-link' %>
       </li>
-      <li class="nav-item">
+      <li class="nav-item nav-link-debate">
         <%= link_to 'Debates', debates_path, class: 'nav-link' %>
       </li>
       <!--<li class="nav-item">
