--- a/app/views/users/shared/_aside.html.erb
+++ b/app/views/users/shared/_aside.html.erb
@@ -14,8 +14,8 @@
     <% end %>
   </div>
   <div class="list-group">
-    <%= link_to 'Minhas salas', my_rooms_users_url, class: 'list-group-item my-rooms' %>
-    <%#= link_to 'Meus debates', my_debates_url, class: 'list-group-item' %>
+    <%= link_to t('my_rooms'), my_rooms_users_url, class: 'list-group-item my-rooms' %>
+    <%= link_to t('my_debates'), my_debates_users_url, class: 'list-group-item my-debates' %>
     <%#= link_to 'Meus artigos', my_debates_url, class: 'list-group-item' %>
     <!-- <a href="#" class="list-group-item">Estatisticas</a> -->
   </div>
