Create show page for debate

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,7 +16,7 @@
                       <li> <a href="#"> A ideia </a> </li>
                       <li> <a href="#"> Equipe </a> </li>
                       <li> <a href="#"> Contato </a> </li>
-                      <li> <a href="#"> Contribua </a> </li>
+                      <li> <a href="https://github.com/jonaselan/BNativus" target="_blank"> Contribua </a> </li>
                   </ul>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
