--- a/app/views/shared/_posting_card.html.erb
+++ b/app/views/shared/_posting_card.html.erb
@@ -25,7 +25,7 @@
         <% end %>
       </div>
       <hr>
-      <%= link_to(posting, target: "_blank", class: 'model-link') do %>
+      <%= link_to(posting, class: 'model-link') do %>
         <div class="row">
           <div class="col-lg-2">
             <% if posting.user.avatar.blank? %>
