--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -1,2 +1,37 @@
-
-sim
+<div class="container">
+  <div class="container-default">
+    <div class="row">
+      <div class="col-lg-6">
+        <i class="fa fa-eye" aria-hidden="true"></i> <%= @debate.views %>
+      </div>
+      <div class="col-lg-6">
+        <i class="fa fa-tag" aria-hidden="true"></i> <%= @debate.category.title %>
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-lg-2">
+        <% if @debate.user.avatar.blank? %>
+          <%= image_tag("profile-icon.png", class: 'card-img-top')  %>
+        <% else %>
+          <%= cl_image_tag(@debate.user.avatar, class: 'card-img-top') %>
+        <% end %>
+        <div class="row">
+          <div class="col-lg-12">
+            <%= @debate.user.username %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <%= t @debate.language.name %>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-10">
+        <h1><%= @debate.title %></h1>
+        <hr>
+        <%= @debate.content %>
+      </div>
+    </div>
+  </div>
+</div>
