--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -83,7 +83,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.submit "Update", class: 'btn btn-success' %>
+    <%= f.submit "Done", class: 'btn btn-success' %>
   </div>
 <% end %>
 
