Create section on home page for articles

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,25 +1,15 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Articles</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @articles.each do |article| %>
-      <tr>
-        <td><%= link_to 'Show', article %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Article', new_article_path %>
+<div class="container">
+  <div class="container-default">
+    <div class="row">
+      <div class="col-lg-8">
+        <h1>Article</h1>
+      </div>
+      <div class="col-lg-4">
+        <%= link_to t('create_article'), new_article_url, class: 'float-right' %>
+      </div>
+    </div>
+    <div class="row">
+      <%= render partial: "shared/posting_card", collection: @articles, as: :posting %>
+    </div>
+  </div>
+</div>
