--- a/app/views/debates/_form.html.erb
+++ b/app/views/debates/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="create-debate-form">
+<div class="create-posting-form">
   <%= form_with(model: debate, local: true) do |form| %>
     <%= render partial: "shared/form_messages", locals: {model: debate} %>
 
