--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Article</h1>
+<div class="container container-default">
+  <h1>New Article</h1>
 
-<%= render 'form', article: @article %>
-
-<%= link_to 'Back', articles_path %>
+  <%= render 'form', article: @article %>
+</div>
