--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,6 +33,19 @@
         </div>
         <%= link_to t('.more_debates'), debates_path %>
         <hr>
+        <div class="row">
+          <!-- Article -->
+          <div class="col-lg-8">
+            <h2> <%= t '.recents_articles' %> </h2>
+          </div>
+          <div class="col-lg-4">
+            <%= link_to t('create_article'), new_article_url, class: 'float-right' %>
+          </div>
+        </div>
+        <div class="row">
+          <%= render partial: "shared/posting_card", collection: @articles, as: :posting %>
+        </div>
+        <%= link_to t('.more_articles'), articles_path %>
       </div>
     </div>
   </div>
