Add section for 'my articles'

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,3 +31,4 @@
 @import "views/users/show";
 @import "views/users/my_rooms";
 @import "views/users/my_debates";
+@import "views/users/my_articles";
