--- a/app/views/debates/_form.html.erb
+++ b/app/views/debates/_form.html.erb
@@ -9,7 +9,7 @@
 
     <div class="form-group">
       <%= form.label :content %>
-      <%= form.cktext_area :content, id: 'sometext', ckeditor: { language: I18n.locale } %>
+      <%= form.cktext_area :content, id: 'debate-id', ckeditor: { language: I18n.locale } %>
     </div>
 
     <div class="form-group">
