Add votable mechanic for postings

--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -31,6 +31,18 @@
         <h1><%= @debate.title %></h1>
         <hr>
         <%= raw @debate.content %>
+        <br>
+        <div class="posting-votes">
+          <%= link_to(upvote_article_path(@article), method: :put) do %>
+            <i class="fa fa-thumbs-up" aria-hidden="true"></i>
+          <% end %>
+          <%= @article.get_upvotes.size%>
+
+          <%= link_to(downvote_article_path(@article), method: :put) do %>
+            <i class="fa fa-thumbs-down" aria-hidden="true"></i>
+          <% end %>
+          <%= @article.get_downvotes.size%>
+        </div>
       </div>
     </div>
   </div>
