Add comments feature on article page

--- a/app/views/debates/index.html.erb
+++ b/app/views/debates/index.html.erb
@@ -9,7 +9,7 @@
       </div>
     </div>
     <div class="row">
-      <%= render partial: "shared/posting_card", collection: @debates, as: :posting %>
+      <%= render partial: "shared/posting/posting_card", collection: @debates, as: :posting %>
     </div>
   </div>
 </div>
