--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -47,3 +47,44 @@
     </div>
   </div>
 </div>
+
+<div class="container mt-4">
+  <div class="container-default">
+    <h2>Comments</h2>
+    <%= @article.comments.count %> Comments
+
+    <div class="row">
+      <div class="col-lg-1">
+        <%= render partial: "shared/user/avatar" %>
+      </div>
+      <div class="col-lg-11">
+        <%= form_for(@comment) do |form| %>
+          <div class="form-group">
+            <%= form.text_area :content, class: 'form-control', rows: 4 %>
+          </div>
+
+          <div class="actions">
+            <%= form.submit 'publish', class: 'btn btn-success' %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+      <% if @article.comments.empty? %>
+        <div class="col-lg-12">
+          Não há comentarios ainda
+        </div>
+      <% else %>
+        <%= @article.comments.each do |comment| %>
+          <div class="col-lg-1">
+            <%= comment.user.avatar %>
+          </div>
+          <div class="col-lg-11">
+            <%= comment.user.username %> | <%= t time_ago_in_words comment.created_at %>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+</div>
