--- a/app/views/users/my_articles.html.erb
+++ b/app/views/users/my_articles.html.erb
@@ -14,7 +14,7 @@
           </div>
         </div>
         <div class="row">
-          <%= render partial: "shared/posting_card", collection: @articles, as: :posting %>
+          <%= render partial: "shared/posting/posting_card", collection: @articles, as: :posting %>
         </div>
         <%= link_to t('.more_articles'), articles_path %>
       </div>
