--- a/app/views/users/shared/_aside.html.erb
+++ b/app/views/users/shared/_aside.html.erb
@@ -1,11 +1,7 @@
 <div class="user-aside-section container-default">
   <div class="user-aside-header">
     <%= link_to edit_user_path(current_user) do %>
-      <% if current_user.avatar.blank? %>
-        <%= image_tag("profile-icon.png", class: 'card-img-top')  %>
-      <% else %>
-        <%= cl_image_tag(current_user.avatar, class: 'card-img-top') %>
-      <% end %>
+      <%= render partial: "shared/user/avatar" %>
     <% end %>
     <p class="no-marging"><%= current_user.username %></p>
     <p class="no-marging"> <%= t 'rooms_text' %>: <%= current_user.created_rooms %></p>
