Use disqus for comments features on posting

--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -1,49 +1,1 @@
-<div class="container">
-  <div class="container-default">
-    <div class="row">
-      <div class="col-lg-6">
-        <i class="fa fa-eye" aria-hidden="true"></i> <%= @debate.views %>
-      </div>
-      <div class="col-lg-6">
-        <i class="fa fa-tag" aria-hidden="true"></i> <%= @debate.category.title %>
-      </div>
-    </div>
-    <hr>
-    <div class="row">
-      <div class="col-lg-2 text-center">
-        <% if @debate.user.avatar.blank? %>
-          <%= image_tag("profile-icon.png", class: 'card-img-top')  %>
-        <% else %>
-          <%= cl_image_tag(@debate.user.avatar, class: 'card-img-top') %>
-        <% end %>
-        <div class="row">
-          <div class="col-lg-12">
-            <%= @debate.user.username %>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <%= t @debate.language.name %>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-10">
-        <h1><%= @debate.title %></h1>
-        <hr>
-        <%= raw @debate.content %>
-        <br>
-        <div class="posting-votes">
-          <%= link_to(upvote_debate_path(@debate), method: :put) do %>
-            <i class="fa fa-thumbs-up" aria-hidden="true"></i>
-          <% end %>
-          <%= @debate.get_upvotes.size%>
-
-          <%= link_to(downvote_debate_path(@debate), method: :put) do %>
-            <i class="fa fa-thumbs-down" aria-hidden="true"></i>
-          <% end %>
-          <%= @debate.get_downvotes.size%>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render partial: "shared/posting/show", locals: { posting: @debate } %>
