--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,95 +1,1 @@
-<div class="container">
-  <div class="container-default">
-    <div class="row">
-      <div class="col-lg-6">
-        <i class="fa fa-eye" aria-hidden="true"></i> <%= @article.views %>
-      </div>
-      <div class="col-lg-6">
-        <i class="fa fa-tag" aria-hidden="true"></i> <%= @article.category.title %>
-      </div>
-    </div>
-    <hr>
-    <div class="row">
-      <div class="col-lg-2 text-center">
-        <% if @article.user.avatar.blank? %>
-          <%= image_tag("profile-icon.png", class: 'card-img-top')  %>
-        <% else %>
-          <%= cl_image_tag(@article.user.avatar, class: 'card-img-top') %>
-        <% end %>
-        <div class="row">
-          <div class="col-lg-12">
-            <%= @article.user.username %>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <%= t @article.language.name %>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-10">
-        <h1><%= @article.title %></h1>
-        <hr>
-        <%= raw @article.content %>
-        <br>
-        <div class="posting-votes">
-          <%= link_to(upvote_article_path(@article), method: :put) do %>
-            <i class="fa fa-thumbs-up" aria-hidden="true"></i>
-          <% end %>
-          <%= @article.get_upvotes.size%>
-
-          <%= link_to(downvote_article_path(@article), method: :put) do %>
-            <i class="fa fa-thumbs-down" aria-hidden="true"></i>
-          <% end %>
-          <%= @article.get_downvotes.size%>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="container mt-4">
-  <div class="container-default">
-    <h2>Comments</h2>
-    <%= @article.comments.count %> Comments
-
-    <div class="row">
-      <div class="col-lg-1">
-        <%= render partial: "shared/user/avatar" %>
-      </div>
-      <div class="col-lg-11">
-        <%= form_for(@comment) do |form| %>
-          <div class="form-group">
-            <%= form.text_area :content, class: 'form-control', rows: 4 %>
-          </div>
-          <div class="row">
-            <div class="col-lg-6">
-              <%= form.text_field :posting_id, value: @article.id, class: 'invisible' %>
-            </div>
-            <div class="col-lg-6">
-              <%= form.submit 'publish', class: 'btn btn-success pull-right' %>
-            </div>
-          </div>
-        <% end %>
-      </div>
-    </div>
-    <hr>
-    <div class="row">
-      <% if @article.comments.empty? %>
-        <div class="col-lg-12">
-          Não há comentarios ainda
-        </div>
-      <% else %>
-        <% @article.comments.each do |comment| %>
-          <div class="col-lg-1">
-            <%= cl_image_tag(comment.user.avatar, class: 'card-img-top') %>
-          </div>
-          <div class="col-lg-11">
-            <%= comment.user.username %> | <%= t time_ago_in_words comment.created_at %><br>
-            <%= comment.content %>
-          </div>
-        <% end %>
-      <% end %>
-    </div>
-  </div>
-</div>
+<%= render partial: "shared/posting/show", locals: { posting: @article } %>
