Minor fix on layout

--- a/app/assets/stylesheets/views/main/main.scss
+++ b/app/assets/stylesheets/views/main/main.scss
@@ -17,6 +17,10 @@ body {
     box-shadow: -3px 3px 7px 2px $mid-grey;
     border-radius: 6px;
     background: white;
+
+    .more-models{
+      margin-top: 15px;
+    }
   }
 }
 
