--- a/app/assets/stylesheets/views/users/show.scss
+++ b/app/assets/stylesheets/views/users/show.scss
@@ -6,6 +6,8 @@
   .user-aside-section {
     .user-aside-header{
       text-align: center;
+      font-size: $font-tiny;
+      color: $dark-grey;
     }
   }
 }
