--- a/app/views/shared/_room_card.html.erb
+++ b/app/views/shared/_room_card.html.erb
@@ -41,7 +41,7 @@
             <% end %>
           </div>
           <div class="col-md-6 col-lg-6 no-padding">
-            <p class="text-center card-username"><%= room.user.username %></p>
+            <p class="text-center card-username-room"><%= room.user.username %></p>
           </div>
         </div>
       <% end %>
