--- a/app/assets/stylesheets/abstract/_variables.scss
+++ b/app/assets/stylesheets/abstract/_variables.scss
@@ -1,8 +1,9 @@
 // Color
 $light-grey: rgba(214, 218, 214, 0.71);
+$mid-grey: rgba(114, 112, 112, 0.38);
+$dark-grey: rgba(2, 2, 2, 0.52);
 $light-blue: rgba(98, 157, 222, 0.95);
 $dark-blue: rgba(38, 103, 175, 0.95);
-$mid-grey: rgba(114, 112, 112, 0.38);
 $green: rgba(51, 220, 25, 0.77);
 $dark-green: rgba(56, 109, 29, 0.94);
 $red: rgba(222, 57, 57, 0.92);
