--- a/app/assets/stylesheets/views/shared/cards.scss
+++ b/app/assets/stylesheets/views/shared/cards.scss
@@ -14,11 +14,11 @@
   .card-body {
     padding: 15px;
     .card-created-at {
-      font-size: 12px;
-      color: $mid-grey;
+      font-size: $font-small;
+      color: $dark-grey;
     }
     h4, h6 {
-      margin: 15px 0;
+      margin-top: 10px;
     }
     hr {
       margin-top: 2rem;
@@ -35,7 +35,16 @@
       }
     }
 
-    .card-username{
+    .card-username-posting, .card-username-room{
+      color: $dark-grey;
+      font-size: $font-tiny;
+    }
+
+    .card-username-posting{
+      margin: 0;
+    }
+
+    .card-username-room{
       margin: 12px 0;
     }
   }
