--- a/app/views/shared/posting/_posting_card.html.erb
+++ b/app/views/shared/posting/_posting_card.html.erb
@@ -34,16 +34,21 @@
             <% else %>
               <%= cl_image_tag(posting.user.avatar, class: 'card-img-top') %>
             <% end %>
-            <p class="text-center card-username"><%= posting.user.username %></p>
           </div>
           <div class="col-lg-10">
             <h4><%= t posting.title %></h4>
-            <h6>
-              <i class="fa fa-globe" aria-hidden="true"></i> <%= t posting.language.name %>
-            </h6>
-            <h6>
-              <i class="fa fa-tag" aria-hidden="true"></i> <%= t posting.category.title %>
-            </h6>
+            <p class="card-username-posting"><%= posting.user.username %></p>
+            <div class="row">
+              <div class="col-lg-auto">
+                <h6> <i class="fa fa-globe" aria-hidden="true"></i> <%= t posting.language.name %> </h6>
+              </div>
+              <div class="col-lg-auto">
+                <h6> <i class="fa fa-tag" aria-hidden="true"></i> <%= t posting.category.title %> </h6>
+              </div>
+              <div class="col-lg-auto">
+                <h6> <i class="fa fa-eye" aria-hidden="true"></i> <%= t posting.views %> </h6>
+              </div>
+            </div>
           </div>
         </div>
       <% end %>
